# da1470x_demo_vscode

./: CMakeLists.txt  event.json  initial_flash.py
.github/workflows/: action.yml
SDK-10.2.6.49/binaries/: ble_suota_client.img  cli_programmer  cli_programmer_osx  mkimage  mkimage_osx
SDK-10.2.6.49/sdk/: compiller_stubs.c
SDK-10.2.6.49/sdk/bsp/: arm_license.txt
SDK-10.2.6.49/sdk/bsp/config/: bsp_debug.h  bsp_defaults.h  bsp_defaults_bringup_da1470x.h  bsp_defaults_da1470x.h  bsp_definitions.h  bsp_device_definitions.h  bsp_device_definitions_internal.h  bsp_memory_defaults.h  bsp_memory_defaults_da1470x.h  partition_table.h
SDK-10.2.6.49/sdk/bsp/config/128M/: partition_table.h
SDK-10.2.6.49/sdk/bsp/config/8M/: partition_table.h
SDK-10.2.6.49/sdk/bsp/config/boards/: brd_prodk_da1470x.h
SDK-10.2.6.49/sdk/bsp/config/custom/: partition_table.h
SDK-10.2.6.49/sdk/bsp/include/: D3107AA_FPGA.h  DA1470x-00.h  cmsis_gcc.h  core_cm0plus.h  core_cm33.h  interrupts.h  sdk_defs.h  suota.h  suota_security_ext.h  system_DA1470x-snc.h  system_DA1470x.h
SDK-10.2.6.49/sdk/bsp/ldscripts/ble_projects/: mem.ld.h  mem_da1470x-snc.ld.h  mem_da1470x.ld.h  sections.ld.h  sections_da1470x-snc.ld.h  sections_da1470x.ld.h
SDK-10.2.6.49/sdk/bsp/ldscripts/non_ble_projects/: mem.ld.h  mem_da1470x-snc.ld.h  mem_da1470x.ld.h  sections.ld.h  sections_da1470x-snc.ld.h  sections_da1470x.ld.h
SDK-10.2.6.49/sdk/bsp/memory/: README OQSPI.md
SDK-10.2.6.49/sdk/bsp/memory/include/: oqspi_adesto_quad.h  oqspi_at25ql641.h  oqspi_at25sl128.h  (+19 more)
SDK-10.2.6.49/sdk/bsp/startup/: assertions.c  config.c
SDK-10.2.6.49/sdk/bsp/system/loaders/uartboot/: CMakeLists.txt  README.md  uartboot.launch  uartboot_attach.launch
SDK-10.2.6.49/sdk/bsp/system/loaders/uartboot/cmake/: sdk.cmake  system.cmake  toolchain.cmake
SDK-10.2.6.49/sdk/bsp/system/loaders/uartboot/config/: custom_config.h
SDK-10.2.6.49/sdk/bsp/system/loaders/uartboot/include/: protocol.h  uartboot_types.h
SDK-10.2.6.49/sdk/bsp/system/loaders/uartboot/ldscripts/: mem.ld  mem_da1470x.ld  sections.ld  sections_da1470x.ld
SDK-10.2.6.49/sdk/bsp/system/loaders/uartboot/src/: main.c
SDK-10.2.6.49/sdk/dialog_coroutines/: croutine.c  dialog_croutine.c  dialog_queue.c  dialog_timers.c  event_groups.c  queue.c  stream_buffer.c  tasks.c  timers.c
SDK-10.2.6.49/sdk/dialog_coroutines/include/: FreeRTOS.h  FreeRTOSConfig.h  croutine.h  dialog_coroutines.h  dialog_croutine.h  dialog_queue.h  dialog_semphr.h  dialog_timers.h  freertos_tasks_c_additions.h  mpu_wrappers.h  portable.h  queue.h  semphr.h  task.h  timers.h
SDK-10.2.6.49/sdk/free_rtos/: tasks.c
SDK-10.2.6.49/sdk/free_rtos/include/: FreeRTOS.h  FreeRTOSConfig.h  freertos_tasks_c_additions.h  mpu_wrappers.h  portable.h  task.h
SDK-10.2.6.49/sdk/interfaces/ble/: README.md
SDK-10.2.6.49/sdk/middleware/config/: middleware_defaults.h  rpmsg_config.h
SDK-10.2.6.49/sdk/middleware/monitoring/: README.md  task_monitoring.c  task_monitoring.h
SDK-10.2.6.49/sdk/middleware/osal/: msg_queues.c  msg_queues.h  osal.h  osal_dgcoroutines.h  osal_freertos.h  resmgmt.c  resmgmt.h  usb_osal_wrapper.c
SDK-10.2.6.49/utilities/cli_programmer/cli/: CmakeLists.txt  README.md  cli_programmer_common.rc  cli_programmer_da1470x.rc
SDK-10.2.6.49/utilities/cli_programmer/libprogrammer/: CmakeLists.txt  crc16.c  crc16.h  gdb_server_cmds.c  gdb_server_cmds.h  programmer.c  protocol_cmds.c  protocol_cmds.h  serial.h  serial_linux.c  serial_win.c
SDK-10.2.6.49/utilities/jdebug/: da1470x_etm.JLinkScript  da1470x_mtb.JLinkScript  da1470x_project_oqspi.jdebug  da1470x_project_oqspi_etm.jdebug  da1470x_project_ram.jdebug  da1470x_project_ram_etm.jdebug  da1470x_project_snc.jdebug
SDK-10.2.6.49/utilities/libbo_crypto/: CmakeLists.txt  bo_crypto.c
SDK-10.2.6.49/utilities/libbo_crypto/api/: bo_crypto.h
SDK-10.2.6.49/utilities/libbo_crypto/third_party_crypto/: CmakeLists.txt
SDK-10.2.6.49/utilities/libmkimage/: CmakeLists.txt  mkimage.c
SDK-10.2.6.49/utilities/libmkimage/api/: mkimage.h
SDK-10.2.6.49/utilities/mkimage/: CmakeLists.txt  image.h  mkimage.c  sw_version.h
SDK-10.2.6.49/utilities/nvparam/: README.md  sections.ld.h  symbols.c
SDK-10.2.6.49/utilities/python_scripts/analysis/: find_qspi_ref_from_ram.py
SDK-10.2.6.49/utilities/python_scripts/api/: application.py  cli_programmer.py  create_nvparam.py  jlink.py  mkimage.py  prepare_local_ini_file.py  script_base.py  utils.py
SDK-10.2.6.49/utilities/python_scripts/carray_generation/: snc_fw_embed.py
SDK-10.2.6.49/utilities/python_scripts/collect_debug_info/: collect_debug_info.py  gdb_custom_cmds.py  gdb_mtb_custom_cmds.py  gdb_mtb_da1470x_snc_custom_cmds.py
SDK-10.2.6.49/utilities/python_scripts/flash/: read_flash_info.py
SDK-10.2.6.49/utilities/python_scripts/mem_report/: create_summary.py  map_reader.py  mem_reporter.py  readme.html  section_diff.py  xlxcreator.py
SDK-10.2.6.49/utilities/python_scripts/oqspi/: create_flash_image.py  erase_oqspi.py  flash_configurations.xml  program_bin_oqspi.py  program_oqspi.py  program_oqspi.xml  program_oqspi_config.py  program_oqspi_nvparam.py
SDK-10.2.6.49/utilities/python_scripts/qspi/: create_flash_image.py  erase_qspi.py  flash_configurations.xml  program_bin_qspi.py  program_qspi.py  program_qspi_config.py  program_qspi_nvparam.py  reboot_device.py
SDK-10.2.6.49/utilities/python_scripts/secure_image/: README.md  generate_keys.py  secure_img_prog.py  secure_keys_cfg.py  secure_keys_prog.py
SDK-10.2.6.49/utilities/python_scripts/tool_conf/: collect_debug_info.launch  erase_oqspi_jtag.launch  erase_oqspi_serial.launch  erase_qspi_jtag.launch  erase_qspi_serial.launch  program_oqspi_config.launch  program_oqspi_jtag.launch  program_oqspi_nvparam.launch  program_oqspi_serial.launch  read_flash_info_jtag.launch  read_flash_info_serial.launch
cmake/: ldscript.cmake  sdk.cmake  system.cmake  toolchain.cmake
config/: custom_config_oqspi.h
lvgl/lv_port/: lv_port_disp.c
lvgl/lvgl/: CMakeLists.txt
lvgl/lvgl/src/extra/libs/png/: lv_png.c
lvgl/lvgl/src/misc/: lv_mem.h
src/: main.c
(+503 files in other folders)
